四种方式创建线程 1.继承Thread类 2.实现Runnable接口 3.通过Callable 、future创建线程 4.通过线程池创建

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,18 @@
     <artifactId>practise</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.0-alpha0</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
