--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>4.12</version>
             <scope>compile</scope>
         </dependency>
+        <!--netty-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.10.Final</version>
+        </dependency>
 
     </dependencies>
 
